Fixed alignment issues

--- a/styles/admin-dashboard.css
+++ b/styles/admin-dashboard.css
@@ -383,6 +383,7 @@ h6 {
     top: 0%;
     left: 0%;
     bottom: 0%;
+    z-index: 200;
 }
 
 .sticky-nav {
